trunk/tests/should-not-compile/return-null-from-int-function.talc
// EXPECTED ERROR: return expression has type null-type but must be assignable to int
function int f() { return null; }
